[package]
name = "sharesign"
version = "0.1.0"
authors = ["Silas McCroskey <sam-d@sam-d.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharks = "0.5"
openssl = "0.10"
sequoia-openpgp = "1.6"
actix-web = "3.3"
actix-rt = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
hex = "0.4"
anyhow = "1.0"
