[package]
name = "sharesign"
version = "0.1.0"
authors = ["Silas McCroskey <sam-d@sam-d.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http = ["actix-web", "actix-rt", "json"]

[dependencies]
sharks = "0.5"
sequoia-openpgp = "1.6"
actix-web = { version = "3.3", optional = true }
actix-rt = { version = "2.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = { version = "0.12", optional = true }
anyhow = "1.0"
thiserror = "1.0"
